tests/snapshots/insta_test__flexible_args-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: Declaration(
                Declaration {
                    ty_spec: Void,
                    init_declarator: Some(
                        InitDeclarator {
                            declarator: Declarator {
                                n_star: 0,
                                direct_declarator: Func(
                                    Ident(
                                        "printf",
                                    ),
                                    [
                                        Declaration {
                                            ty_spec: Char,
                                            init_declarator: Some(
                                                InitDeclarator {
                                                    declarator: Declarator {
                                                        n_star: 1,
                                                        direct_declarator: Ident(
                                                            "msg",
                                                        ),
                                                    },
                                                    initializer: None,
                                                },
                                            ),
                                            debug_info: DebugInfo {
                                                file_info: FileInfo {
                                                    file_name: "not impl name.c",
                                                    src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                                                },
                                                pos: Position {
                                                    n_char: 16,
                                                    n_line: 1,
                                                },
                                            },
                                        },
                                    ],
                                    true,
                                ),
                            },
                            initializer: None,
                        },
                    ),
                    debug_info: DebugInfo {
                        file_info: FileInfo {
                            file_name: "not impl name.c",
                            src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                        },
                        pos: Position {
                            n_char: 4,
                            n_line: 1,
                        },
                    },
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                },
                pos: Position {
                    n_char: 4,
                    n_line: 1,
                },
            },
        },
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Int,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Num(
                                                                2,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                                                                },
                                                                pos: Position {
                                                                    n_char: 16,
                                                                    n_line: 4,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Func(
                                            "printf",
                                            [
                                                Expr {
                                                    kind: StrLit(
                                                        "Hello World:%d\n",
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_info: FileInfo {
                                                            file_name: "not impl name.c",
                                                            src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                                                        },
                                                        pos: Position {
                                                            n_char: 15,
                                                            n_line: 5,
                                                        },
                                                    },
                                                },
                                                Expr {
                                                    kind: Ident(
                                                        "a",
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_info: FileInfo {
                                                            file_name: "not impl name.c",
                                                            src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                                                        },
                                                        pos: Position {
                                                            n_char: 35,
                                                            n_line: 5,
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 5,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "\n    void printf(char *msg, ...);\n    \n    int main() {\n        int a = 2;\n        printf(\"Hello World:%d\\n\", a);\n    }\n    ",
                },
                pos: Position {
                    n_char: 4,
                    n_line: 3,
                },
            },
        },
    ],
}
