tests/snapshots/insta_test__flexible_args-4.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Void,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 9,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 15,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 16,
                n_line: 1,
            },
        },
    },
    Token {
        kind: BinOp(
            Star,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 21,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 22,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Comma,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 25,
                n_line: 1,
            },
        },
    },
    Token {
        kind: DotDotDot,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 27,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 30,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 31,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Void,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "printf2",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 9,
                n_line: 2,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 16,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 17,
                n_line: 2,
            },
        },
    },
    Token {
        kind: BinOp(
            Star,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 22,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 23,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Comma,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 26,
                n_line: 2,
            },
        },
    },
    Token {
        kind: DotDotDot,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 28,
                n_line: 2,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 31,
                n_line: 2,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 33,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 14,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 15,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 18,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 19,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 3,
                n_line: 5,
            },
        },
    },
]
