tests/snapshots/insta_test__flexible_args.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Void,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 9,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 15,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 16,
                n_line: 1,
            },
        },
    },
    Token {
        kind: BinOp(
            Star,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 21,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 22,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Comma,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 25,
                n_line: 1,
            },
        },
    },
    Token {
        kind: DotDotDot,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 27,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 30,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 31,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 4,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 12,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 13,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 15,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 8,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 12,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Eq,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 14,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Num(
            2,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 16,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 17,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 8,
                n_line: 5,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 14,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Str(
            "Hello World:%d\n",
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 15,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Comma,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 33,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 35,
                n_line: 5,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 36,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 37,
                n_line: 5,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 4,
                n_line: 6,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_name: "",
            pos: Position {
                n_char: 4,
                n_line: 7,
            },
        },
    },
]
