tests/snapshots/insta_test__implicit_cast-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Num(
                                                                2,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                                                                },
                                                                pos: Position {
                                                                    n_char: 16,
                                                                    n_line: 2,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Char,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "b",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Ident(
                                                                "a",
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                                                                },
                                                                pos: Position {
                                                                    n_char: 17,
                                                                    n_line: 3,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 3,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Assign(
                                            Expr {
                                                kind: Ident(
                                                    "b",
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: FileInfo {
                                                        file_name: "not impl name.c",
                                                        src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                                                    },
                                                    pos: Position {
                                                        n_char: 8,
                                                        n_line: 4,
                                                    },
                                                },
                                            },
                                            Expr {
                                                kind: Num(
                                                    4,
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: FileInfo {
                                                        file_name: "not impl name.c",
                                                        src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                                                    },
                                                    pos: Position {
                                                        n_char: 12,
                                                        n_line: 4,
                                                    },
                                                },
                                            },
                                            Eq,
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 10,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "\n    int main() {\n        int a = 2;\n        char b = a;\n        b = 4;\n    }\n    ",
                },
                pos: Position {
                    n_char: 4,
                    n_line: 1,
                },
            },
        },
    ],
}
